--- a/app/assets/styles/components/_page-section.css
+++ b/app/assets/styles/components/_page-section.css
@@ -12,7 +12,7 @@
   }
 
   &--z-index-1 {
-    z-index: 1;
+    z-index: 2;
   }
 
   &--no-pointer-events {
