--- a/app/assets/styles/layout/_header.css
+++ b/app/assets/styles/layout/_header.css
@@ -3,7 +3,7 @@
   padding-top: 0.8em;
   padding-bottom: 0.8em;
   font-weight: 300;
-  z-index: 1;
+  z-index: 2;
 
   @mixin atLarge {
     padding-top: 2em;
